2011-11-17  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests is locale dependent
        https://bugs.webkit.org/show_bug.cgi?id=68691

        Reviewed by Adam Barth.

        Make NRWT use a clean environment, just like ORWT did.

        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
        * Scripts/webkitpy/layout_tests/port/chromium_win.py:
        * Scripts/webkitpy/layout_tests/port/chromium_win_unittest.py:
        * Scripts/webkitpy/layout_tests/port/efl.py:
        * Scripts/webkitpy/layout_tests/port/google_chrome_unittest.py:
        * Scripts/webkitpy/layout_tests/port/mac.py:
        * Scripts/webkitpy/layout_tests/port/qt.py:
        * Scripts/webkitpy/layout_tests/port/qt_unittest.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/win.py:

2011-11-17  Dirk Pranke  <dpranke@chromium.org>

        Chromium Mac 10.5 CG dbg bots are failing to run webkit_gpu_tests
        https://bugs.webkit.org/show_bug.cgi?id=72615

        Reviewed by James Robinson.

        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:

2011-11-17  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Layer violation: qt_runtime.cpp accesses QWebElement and QTDRTNode
        https://bugs.webkit.org/show_bug.cgi?id=72595

        Reviewed by Noam Rosenthal.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree): Use new initialize() function to
        ensure the registration of the DRTNode JS bindings.
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::LayoutTestController): Remove unnecessary explicit qt meta type
        registration of QWebElement (now done implicitly through QWebPage ->
        QtWebElementRunTime::initialize code path)

2011-11-17  Adam Roben  <aroben@apple.com>
