@@ -1,5 +1,15 @@
 2011-11-17  Eric Seidel  <eric@webkit.org>
 
+        Move check-webkit-style's guts into webkitpy/style/main.py
+        https://bugs.webkit.org/show_bug.cgi?id=72657
+
+        Reviewed by Adam Barth.
+
+        * Scripts/check-webkit-style:
+        * Scripts/webkitpy/style/main.py:
+
+2011-11-17  Eric Seidel  <eric@webkit.org>
+
         new-run-webkit-tests is locale dependent
         https://bugs.webkit.org/show_bug.cgi?id=68691
 
